# cpp_python_grpc_sample

./: .gitignore  CMakeLists.txt  README.md  greeter_client.py  greeter_service_impl.cpp  greeter_service_impl.h  main.cpp
cmake/: FindGRPC.cmake  FindProtobuf.cmake
protos/: hello.proto
